objects/HotDocs_Integration_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Attempts_Limit__c</fullName>
        <label># Attempts Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID_IBM__c</fullName>
        <label>Client ID (IBM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret_IBM__c</fullName>
        <label>Client Secret (IBM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Verbose_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Verbose Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint_Base_URL__c</fullName>
        <label>Endpoint Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Development_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interview Development Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_Override_URL__c</fullName>
        <label>Interview Override URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Answer_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Answer File</label>
        <type>Checkbox</type>
    </fields>
    <label>HotDocs Integration Setting</label>
    <pluralLabel>HotDocs Integration Settings</pluralLabel>
</CustomObject>